--- a/app/src/main/res/layout/activity_customer_path_restaurent.xml
+++ b/app/src/main/res/layout/activity_customer_path_restaurent.xml
@@ -13,11 +13,20 @@
         tools:context=".CustomerPathToRestaurent" />
 
     <Button
-        android:id="@+id/btn_request_direction"
+        android:id="@+id/getPath"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:text="request_direction" />
+
+    <Button
+        android:id="@+id/back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="17dp"
+        android:layout_toStartOf="@+id/getPath"
+        android:text="Back" />
 
 </RelativeLayout>
