--- a/app/src/main/res/layout/activity_restaurent_show_details.xml
+++ b/app/src/main/res/layout/activity_restaurent_show_details.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/res11"
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="com`"
+            android:layout_marginLeft="90dp"
             android:gravity="center_horizontal"
             android:text="General Details"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
@@ -197,13 +201,14 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:layout_marginLeft="150dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="130dp"
                 android:id="@+id/updateDetails"
-                android:text="Update Details"/>
+                android:text="Update Details"
+                android:background="@drawable/btn"/>
         </LinearLayout>
 
     </LinearLayout>
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
