--- a/app/src/main/res/layout/activity_customer_home.xml
+++ b/app/src/main/res/layout/activity_customer_home.xml
@@ -4,13 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/res14"
+    >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="com`"
         android:gravity="center_horizontal"
         android:text="General Details"
+        android:textColor="@color/white"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
 
     <LinearLayout
@@ -23,6 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:text="Restaurent Name:" />
 
 
@@ -32,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:hint=" " />
     </LinearLayout>
     <LinearLayout
@@ -44,6 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:text="Name of Manager:" />
 
 
@@ -53,6 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:hint=" " />
     </LinearLayout>
     <LinearLayout
@@ -65,6 +72,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:text="Manager Contact:" />
 
 
@@ -75,6 +83,7 @@
             android:layout_marginLeft="10dp"
             android:inputType="number"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:hint=" " />
     </LinearLayout>
     <LinearLayout
@@ -87,6 +96,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:text="Address:" />
 
 
@@ -96,6 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:hint=" " />
     </LinearLayout>
 
@@ -108,6 +119,7 @@
             android:layout_width="10dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
+            android:textColor="@color/white"
             android:layout_weight="1"
             android:text="Open Day:" />
 
@@ -118,6 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:hint=" " />
     </LinearLayout>
 
@@ -131,6 +144,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:text="Close Day:" />
 
 
@@ -140,6 +154,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:hint=" " />
     </LinearLayout>
     <LinearLayout
@@ -152,6 +167,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:text="Open Time:" />
 
 
@@ -162,6 +178,7 @@
             android:layout_marginLeft="10dp"
             android:inputType="time"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:hint=" " />
     </LinearLayout>
     <LinearLayout
@@ -174,6 +191,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_weight="1"
+            android:textColor="@color/white"
             android:text="Close Time:" />
 
 
@@ -183,6 +201,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:inputType="time"
+            android:textColor="@color/white"
             android:layout_weight="1"
             android:hint=" " />
     </LinearLayout>
@@ -190,7 +209,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Menu"
-        android:id="@+id/menu"/>
+        android:textColor="@color/white"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+    android:id="@+id/menu"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -199,18 +220,22 @@
     </android.support.v7.widget.RecyclerView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:id="@+id/goToRestaurent"
-            android:text="Go to the restaurent"/>
+            android:background="@drawable/btn"
+            android:text="Go to the restaurent"
+            />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:id="@+id/back"
+            android:background="@drawable/btn"
             android:text="Back"/>
 
 
