--- a/app/src/main/res/layout/activity_restaurent_add_menu_iteam.xml
+++ b/app/src/main/res/layout/activity_restaurent_add_menu_iteam.xml
@@ -4,12 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/res6"
     tools:context="com.example.yash.getmerestaurent.RestaurentAddMenuIteam">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <TextView
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="com`"
@@ -26,8 +28,11 @@
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="130dp"
                 android:layout_weight="1"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+
+            android:fontFamily="com`"
                 android:text="Category:" />
 
 
@@ -36,7 +41,8 @@
                 android:layout_width="89dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="100dp"
+                android:layout_marginRight="80dp"
+                android:layout_marginTop="150dp"
                 android:layout_weight="1"
                 android:hint=" " />
         </LinearLayout>
@@ -49,9 +55,11 @@
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
                 android:layout_weight="1"
-                android:text="Name of Item:" />
+                android:text="Name:"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                />
 
 
             <EditText
@@ -59,6 +67,7 @@
                 android:layout_width="89dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
+                android:layout_marginRight="80dp"
                 android:layout_marginTop="50dp"
                 android:layout_weight="1"
                 android:hint=" " />
@@ -72,9 +81,11 @@
                 android:layout_width="10dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="56dp"
                 android:layout_weight="1"
-                android:text="Price in Rupees:" />
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+
+                android:text="Price:" />
 
 
             <EditText
@@ -85,6 +96,8 @@
                 android:layout_marginTop="50dp"
                 android:inputType="number"
                 android:layout_weight="1"
+                android:layout_marginRight="80dp"
+
                 android:hint=" " />
         </LinearLayout>
 
