--- a/app/src/main/res/layout/activity_restaurent_home.xml
+++ b/app/src/main/res/layout/activity_restaurent_home.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/res15"
     tools:context="com.example.yash.getmerestaurent.RestaurentHome">
 
     <LinearLayout
@@ -12,20 +13,32 @@
         android:orientation="vertical">
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/btn"
+            android:layout_marginTop="90dp"
+            android:layout_marginLeft="90dp"
+
             android:id="@+id/showMenu"
             android:text="Show Menu"/>
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/showDetails"
+            android:background="@drawable/btn"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="90dp"
+
             android:text="Show Details"/>
 
         <Button
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="@drawable/btn"
+            android:layout_marginTop="50dp"
+            android:layout_marginLeft="90dp"
+
             android:id="@+id/signOut"
             android:text="Sign Out"/>
         <LinearLayout
@@ -36,7 +49,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:layout_marginLeft="120dp"
+                android:layout_marginLeft="90dp"
+                android:background="@drawable/btn"
                 android:id="@+id/registerCurrentLocation"
                 android:text="Register Current Location"/>
         </LinearLayout>
