--- a/app/src/main/res/layout/activity_restaurent_show_menu.xml
+++ b/app/src/main/res/layout/activity_restaurent_show_menu.xml
@@ -4,19 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/res10"
     tools:context="com.example.yash.getmerestaurent.RestaurentShowMenu">
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/btn"
         android:id="@+id/addItem"
+        android:text="Add Item"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginTop="450dp"
+        android:background="@drawable/btn"
+        android:id="@+id/mback"
         android:text="Add Item"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycleView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:layout_marginLeft="70dp"
         android:layout_below="@+id/addItem"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="31dp"
