--- a/app/src/main/res/layout/menu_item_list.xml
+++ b/app/src/main/res/layout/menu_item_list.xml
@@ -6,7 +6,9 @@
     android:layout_gravity="center"
     android:layout_margin="5dp"
     card_view:cardCornerRadius="4dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/res12"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
